# finwrap

./: .gitignore  README.md  pyproject.toml
examples/: example_conf.yaml  load_account.py  sample_hsbc_data.csv  sample_revolut_data.csv
src/finwrap/: __init__.py  currency.py  models.py
src/finwrap/export/: bagels.py
test/: test_account.py
